# spark-pdf

./: .gitignore  README.md  TesseractParams.md  build.sbt
.github/workflows/: scala.yml
common/src/main/scala/: Enums.scala
common/src/main/scala/datasources/: PdfBasePartitionedFileUtil.scala  PdfPartitionReadedBase.scala  PdfPartitionReaderPDFBox.scala
common/src/main/scala/ocr/: TesseractBytedeco.scala
common/src/main/scala/schemas/: Box.scala  Document.scala
examples/: PdfDataSource.ipynb  PdfDataSourceDatabricks.ipynb  PdfDataSourceDatabricksUnityCatalog.ipynb  PdfDataSourceSpark4.ipynb  PdfDataSourceSparkConnect.ipynb
project/: plugins.sbt
python/: pyproject.toml  requirements.txt  setup.py
python/sparkpdf/: __init__.py  datasource.py
python/tests/: test_pdf_datasource.py
spark33/src/main/scala/datasources/: PdfPartitionedFileUtil.scala
spark34/src/main/scala/datasources/: PdfPartitionedFileUtil.scala
spark35/src/main/scala/datasources/: PdfPartitionedFileUtil.scala
spark40/src/main/scala/datasources/: PdfPartitionedFileUtil.scala
src/main/scala/: Enums.scala
src/main/scala/datasources/: PdfBatchTable.scala  PdfDataSource.scala  PdfPartitionReadedBase.scala  PdfPartitionReaderFactory.scala  PdfPartitionReaderGS.scala  PdfPartitionReaderPDFBox.scala  PdfPartitionedFileUtil.scala  PdfScan.scala  PdfScanBuilder.scala
src/main/scala/ocr/: TesseractBytedeco.scala
src/main/scala/schemas/: Box.scala  Image.scala
src/test/scala/: PdfDatasourceSuite.scala
